--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.1",
     "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-sparkline": "^2.0.0-beta",
     "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-sparklines": "^1.7.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-gesture-handler": "~2.14.0"
+    "react-sparklines": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
