--- a/app.json
+++ b/app.json
@@ -25,6 +25,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-font", 
+        {
+          "fonts": ["./assets/fonts/Archivo-Bold.ttf", "./assets/fonts/Archivo-ExtraBold.ttf", "./assets/fonts/Archivo-ExtraLight.ttf", "./assets/fonts/Archivo-Light.ttf", "./assets/fonts/Archivo-Medium.ttf", "./assets/fonts/Archivo-SemiBold.ttf", "./assets/fonts/Archivo-Regular.ttf", "./assets/fonts/Archivo-Thin.ttf"]
+        }
+      ]
+    ]
   }
 }
