--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-sparkline": "^2.0.0-beta",
     "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-sparklines": "^1.7.0"
+    "react-sparklines": "^1.7.0",
+    "expo-font": "~11.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
